<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".MainActivity"
    tools:showIn="@layout/activity_main">


    <com.udacity.LoadingButton
        android:id="@+id/custom_button"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_margin="20dp"
        app:loadingColor="@color/colorPrimaryDark"
        app:buttonColor="@color/colorPrimary"
        app:circleColor="@color/colorAccent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.951" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="195dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@color/colorPrimaryDark"
        app:srcCompat="@drawable/ic_download_base"
        />

    <RadioGroup
        android:id="@+id/select_option"
        android:layout_width="0dp"
        android:layout_height="283dp"
        app:layout_constraintBottom_toTopOf="@+id/custom_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        app:layout_constraintVertical_bias="0.542">

        <RadioButton
            android:id="@+id/glide_option"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/glide_option"
            android:textAppearance="@style/option_style"
            android:layout_margin="@dimen/fab_margin"/>

        <RadioButton
            android:id="@+id/load_app_option"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="@style/option_style"
            android:text="@string/load_app_option"
            android:layout_margin="@dimen/fab_margin"/>

        <RadioButton
            android:id="@+id/retrofit_option"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/retrofit_option"
            android:textAppearance="@style/option_style"
            android:layout_margin="@dimen/fab_margin"/>
    </RadioGroup>

</androidx.constraintlayout.widget.ConstraintLayout>